programs.css
@import url(https://fonts.googleapis.com/css?family=Raleway);


/*NAVIGATION*/
nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #FFFFFF;

    width: 90%;
    height: 65px;
    box-shadow: 0px 2px 7px #655a5a
}

nav li {
    float: left;
}

nav li img {
    height: 60px;
    padding-left: 100px;
}

nav li a {
    display: block;
    color: black;
    font-weight: 600;
    text-align: center;
    text-decoration: none;
}

nav li .active {
    padding-right: 100px
}
/*END OF NAVIGATION*/
.small-6 {
    text-align: center;

}

footer{
    background: #757575;
}


footer .contact {
    min-width: 100%
}

footer h5 {
    padding-top: 50px;
    font-size: 1.8em;
    font-family: "raleway", serif;
    font-weight: 600;
}

footer p {
    text-align: center;
    padding-top: 20px;
    font-size: 1.5em
}

@media only screen and (max-width: 1024px) {
    .small-6 {
        width: 50%;
        text-align: center;

    }


    .thumbnail {
        margin-top: 5%;
        border: solid 4px #fefefe;
        box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
        max-width: 270px;
        border-radius: 3px;
        margin-bottom: 1rem;

    }
}





@media only screen and (max-width: 600px) {
    .small-6 {
        width: 100%;
        text-align: center;

    }
    .left{
        margin-top: 0%;
    }

    .thumbnail {
        margin-top: 5%;
        max-width: 270px;
        border: solid 4px #fefefe;
        box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
        border-radius: 3px;
        margin-bottom: 1rem;
        margin-left: 0%;

}
}

